@@ -114,3 +114,5 @@ humanReadableDate()
 sanitizeInput()
 factorial()
 fibonacci()
+generateSlug()
+getWeekdays()
